tests/ui/redefine_print.stderr
Error [E0106]: the name `print` is built in and can't be redefined
  --> tests/ui/redefine_print.lex:1:4
    |
  1 | fn print() {
    |    ^^^^^
 Why: `print` is provided by the language itself
 Fix: choose a different name for this function
