tests/ui/redefine_print.jet
fn print() {
}

fn main() {
    print("hi");
}
